# Chino

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  chino.py  install.sh  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report-🐛.md  feature-request-💫.md
.github/workflows/: greetings.yml  publish_pypi.yml  testing.yml
src/chino/: __init__.py  __main__.py  conversation.py  main.py  migrations.py  query.py  utils.py
src/chino/store/: migrations.py
src/chino/utils/: create_database.py  query_data.py
tests/unit/: conftest.py  test_conversation.py  test_migrations.py  test_query.py  test_utils.py
