[project]
name = "Chino"
version = "0.1.0"
description = "Chino is a terminal based chatbot based on ChatGPT."
authors = [
    {name = "Sam", email = "asamadans@gmail.com"},
]
dependencies = [
    "langchain>=0.1.6",
    "langchain-community>=0.0.19",
    "langchain-openai>=0.0.5",
    "typer[all]>=0.9.0",
    "unstructured[pdf]>=0.11.8",
    "chromadb>=0.4.22",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm]
package-type = "library"

[tool.pdm.scripts]
start = "python src/chino/main.py"
embed = "python src/chino/utils/create_database.py"
lint = "pre-commit run --all-files"

[tool.pdm.dev-dependencies]
test = [
    "pre-commit>=3.6.1",
]
