[project]
name = "chinoai"
version = "1.0.0"
description = "Chino is a terminal based chatbot based on ChatGPT."
authors = [
    {name = "Sam", email = "asamadans@gmail.com"},
]
dependencies = [
    "langchain>=0.1.6",
    "langchain-community>=0.0.19",
    "langchain-openai>=0.0.5",
    "typer[all]>=0.9.0",
    "unstructured[pdf]>=0.11.8",
    "chromadb>=0.4.22",
]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["chatbot", "terminal", "openai", "rag", "bumpver"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["black", "pytest", "pre-commit", "twine"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/SAMAD101/Chino"

[project.scripts]
chino = "chino.__main__:app"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/chino/__init__.py" = ["{version}"]
